change ConfigUtil -> ConfigBuilder